<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/navigation_profile"/>
        <item
            android:id="@+id/teacher_shedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/navigation_teacher_schedule"/>
        <item
            android:id="@+id/homeworks"
            android:icon="@drawable/ic_homework"
            android:title="@string/navigation_home_works"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/navigation_logout"/>
    </group>
</menu>