<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lessonInfo"
            type="com.project.mobile_university.presentation.lessonInfo.teacher.contract.LessonInfoTeacherContract.ObservableStorage"/>
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/lesson_info_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/small_margin">

                    <TextView
                        android:id="@+id/date"
                        style="@style/HeaderText.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{lessonInfo.lesson.currentDate}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="5 March. 2019"/>

                    <TextView
                        android:id="@+id/subject"
                        style="@style/PrimaryText.Medium"
                        setSubject="@{lessonInfo.lesson.subjectName}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        app:layout_constraintTop_toBottomOf="@id/lecture_type"
                        tools:text="Subject: Math"/>

                    <TextView
                        android:id="@+id/hall"
                        style="@style/PrimaryText.Medium"
                        setHall="@{lessonInfo.lesson.lectureHallName}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:singleLine="true"
                        app:layout_constraintEnd_toStartOf="@+id/geo_tag"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/subject"
                        tools:text="Hall: E323"/>

                    <ImageView
                        android:id="@+id/geo_tag"
                        android:layout_width="@dimen/small_icon_height"
                        android:layout_height="@dimen/small_icon_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_location"
                        android:tint="@color/accent"
                        app:layout_constraintBottom_toBottomOf="@+id/hall"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/hall"
                        app:visibleOrGone="@{lessonInfo.lesson.coordinates != null}"/>

                    <TextView
                        android:id="@+id/lecture_type"
                        style="@style/PrimaryText.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        app:setLessonType="@{lessonInfo.lesson.lessonType}"
                        app:visibleOrGone="@{lessonInfo.lesson.lessonType != null}"
                        tools:text="Lesson type: lecture"/>

                    <TextView
                        android:id="@+id/teacher_name"
                        style="@style/PrimaryText.Medium"
                        setTeacher="@{lessonInfo.lesson.teacherName}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        app:layout_constraintTop_toBottomOf="@id/hall"
                        tools:text="Teacher: Teacher name"/>

                    <TextView
                        android:id="@+id/lesson_status"
                        style="@style/PrimaryText.Medium"
                        setLessonStatus="@{lessonInfo.lesson.lessonStatus}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        app:layout_constraintTop_toBottomOf="@+id/teacher_name"
                        tools:text="Lesson's status: Ready"/>

                    <TextView
                        android:id="@+id/check_list_header"
                        style="@style/PrimaryText.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:text="@string/lesson_info_check_list_header_string"
                        app:layout_constraintEnd_toStartOf="@+id/check_list_button_container"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lesson_status"/>


                    <FrameLayout
                        android:id="@+id/check_list_button_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/check_list_header"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/check_list_header">

                        <Button
                            android:id="@+id/check_list_button"
                            style="@style/PrimaryText.Medium"
                            check_list_text="@{lessonInfo.lesson.checkListExtId}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_other_selector"
                            tools:text="@string/lesson_info_check_list_create"/>

                        <ProgressBar
                            android:id="@+id/check_list_progress_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"/>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/subgroups"
                        style="@style/PrimaryText.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/subgroups_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/check_list_header"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/subgroup_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/small_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/subgroups"
                        tools:listitem="@layout/item_subgroup_teacher"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <com.project.mobile_university.presentation.common.ui.PlaceHolderView
                android:id="@+id/place_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/small_margin"
                android:visibility="gone"/>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>